fixed titulos de collapsedTablero

--- a/css/collapsedTable.css
+++ b/css/collapsedTable.css
@@ -14,6 +14,9 @@
 #collapsedTableroContainer tbody td{
 	border-radius: 3px;
 }
+#collapsedTableroContainer h2{
+	padding-bottom: 0
+}
 
 #collapsedTableroContainer .number1:before{
 	content:"Unidad";
